fix overflow-x

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -249,7 +249,8 @@ svg * {
   border: 0 !important;
   padding: 0 !important;
   white-space: nowrap !important;
-  clip-path: inset(100%) !important;
+  -webkit-clip-path: inset(100%) !important;
+          clip-path: inset(100%) !important;
   clip: rect(0 0 0 0) !important;
   overflow: hidden !important;
 }
@@ -425,11 +426,13 @@ h4 {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  column-gap: 40px;
+  -moz-column-gap: 40px;
+       column-gap: 40px;
 }
 @media (max-width: 1280px) {
   .header__inner {
-    column-gap: 20px;
+    -moz-column-gap: 20px;
+         column-gap: 20px;
   }
 }
 .header__logo {
@@ -437,11 +440,13 @@ h4 {
   align-items: center;
   width: 100%;
   max-width: clamp(144px, 15.27vw, 220px);
-  column-gap: 13px;
+  -moz-column-gap: 13px;
+       column-gap: 13px;
 }
 @media (max-width: 1280px) {
   .header__logo {
-    column-gap: 10px;
+    -moz-column-gap: 10px;
+         column-gap: 10px;
   }
 }
 @media (hover: hover) {
@@ -462,11 +467,13 @@ h4 {
 .header__menu-list {
   display: flex;
   align-items: center;
-  column-gap: 40px;
+  -moz-column-gap: 40px;
+       column-gap: 40px;
 }
 @media (max-width: 1280px) {
   .header__menu-list {
-    column-gap: 20px;
+    -moz-column-gap: 20px;
+         column-gap: 20px;
   }
 }
 .header__menu-link {
@@ -650,7 +657,8 @@ h4 {
   display: flex;
   justify-content: start;
   align-items: center;
-  column-gap: 40px;
+  -moz-column-gap: 40px;
+       column-gap: 40px;
 }
 .section__header:not(:last-child) {
   margin-bottom: 80px;
@@ -698,13 +706,15 @@ h4 {
   display: flex;
   justify-content: space-between;
   align-items: start;
-  column-gap: 50px;
+  -moz-column-gap: 50px;
+       column-gap: 50px;
 }
 @media (max-width: 1023px) {
   .hero__main {
     justify-content: center;
     align-items: center;
-    column-gap: 25px;
+    -moz-column-gap: 25px;
+         column-gap: 25px;
   }
 }
 @media (max-width: 767px) {
@@ -780,14 +790,16 @@ h4 {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  column-gap: 50px;
+  -moz-column-gap: 50px;
+       column-gap: 50px;
 }
 @media (max-width: 767px) {
   .hero__partners-list {
     flex-wrap: wrap;
     row-gap: 25px;
     justify-content: center;
-    column-gap: 80px;
+    -moz-column-gap: 80px;
+         column-gap: 80px;
     align-items: center;
   }
 }
@@ -872,7 +884,8 @@ h4 {
   display: flex;
   justify-content: space-between;
   padding: 50px;
-  column-gap: 30px;
+  -moz-column-gap: 30px;
+       column-gap: 30px;
   min-height: 310px;
   border: var(--border);
   background-color: var(--color-light-gray);
@@ -918,7 +931,8 @@ h4 {
   max-width: 165px;
   justify-content: start;
   align-items: center;
-  column-gap: 15px;
+  -moz-column-gap: 15px;
+       column-gap: 15px;
   font-size: 20px;
   font-weight: 400;
 }
@@ -949,7 +963,8 @@ h4 {
     border: 0 !important;
     padding: 0 !important;
     white-space: nowrap !important;
-    clip-path: inset(100%) !important;
+    -webkit-clip-path: inset(100%) !important;
+            clip-path: inset(100%) !important;
     clip: rect(0 0 0 0) !important;
     overflow: hidden !important;
   }
@@ -994,7 +1009,8 @@ h4 {
 .banner__inner {
   display: flex;
   align-items: center;
-  column-gap: 40px;
+  -moz-column-gap: 40px;
+       column-gap: 40px;
   background-color: var(--color-light-gray);
   border-radius: var(--border-radius-large);
 }
@@ -1071,7 +1087,8 @@ h4 {
     scroll-snap-type: x mandatory;
     overflow-x: scroll;
     width: 100vw;
-    column-gap: 20px;
+    -moz-column-gap: 20px;
+         column-gap: 20px;
   }
 }
 .studies__item {
@@ -1117,7 +1134,8 @@ h4 {
   max-width: 150px;
   display: inline-flex;
   align-items: center;
-  column-gap: 15px;
+  -moz-column-gap: 15px;
+       column-gap: 15px;
   font-size: 20px;
   line-height: 1.4;
   color: var(--color-light-peach);
@@ -1132,5 +1150,6 @@ h4 {
     opacity: 0.7;
   }
 }
-
-/*# sourceMappingURL=styles.css.map */
+.table-responsive {
+  overflow-x: auto;
+}/*# sourceMappingURL=styles.css.map */
